--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,39 +1,32 @@
-name: Python Data Structures Tests
+name: Python Tests
 
-# Trigger workflow on push or pull request to main branch
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   test:
     runs-on: ubuntu-latest
 
-    steps:
-      # Checkout repository
-      - name: Checkout repository
-        uses: actions/checkout@v3
+    strategy:
+      matrix:
+        python-version: [3.10, 3.11, 3.12, 3.13]
 
-      # Set up Python
-      - name: Set up Python
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Python ${{ matrix.python-version }}
         uses: actions/setup-python@v4
         with:
-          python-version: '3.13.7'
+          python-version: ${{ matrix.python-version }}
 
-      # Install dependencies
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r requirements.txt
 
-      # Run tests with pytest
       - name: Run tests
         run: |
           pytest tests/ -v
-
-      # Optionally, test results
-      - name: Display test results
-        run: |
-          echo "Tests completed"
